<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_6sdp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/brawler"
            android:gravity="center"
            android:text="@string/reset_password_dialog_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/primaryText"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/brawler"
            android:text="@string/reset_password_dialog_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/secondaryText" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/dialog_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:hint="@string/email" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:orientation="horizontal"
            android:weightSum="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/reset_dialog_ok_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_weight="0.5"
                android:background="@drawable/button_blue"
                android:fontFamily="@font/aclonica"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/reset_dialog_cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_weight="0.5"
                android:background="@drawable/button_red"
                android:fontFamily="@font/aclonica"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>