<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.login.LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/logo_curved"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
        app:layout_constraintStart_toStartOf="@+id/login_email"
        app:layout_constraintTop_toTopOf="@+id/appCompatImageView">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/audiowide"
            android:text="@string/welcome_back"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/primaryText" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ruslan_display"
            android:text="@string/login"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/primaryText" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        android:background="@drawable/border_gray"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="@dimen/_4sdp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/primaryText"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        android:background="@drawable/border_gray"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="@dimen/_4sdp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/primaryText"
        app:layout_constraintTop_toBottomOf="@+id/login_email" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forget_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:background="?attr/selectableItemBackground"
        android:fontFamily="@font/brawler"
        android:gravity="end"
        android:text="@string/forget_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/secondaryText"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/login_password"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_18sdp"
        android:gravity="center"
        android:weightSum="1"
        app:layout_constraintTop_toBottomOf="@+id/forget_password_button">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.55"
            android:background="@drawable/button_red"
            android:fontFamily="@font/aclonica"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_22sdp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:fontFamily="@font/brawler"
            android:text="@string/new_user"
            android:textColor="@color/secondaryText"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/navigate_to_sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/brawler"
            android:text="@string/u_sign_up"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/login_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>