<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.signup.SignUpActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/logo_curved"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
        app:layout_constraintStart_toStartOf="@+id/sign_up_email"
        app:layout_constraintTop_toTopOf="@+id/appCompatImageView">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/audiowide"
            android:text="@string/hello"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/primaryText" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ruslan_display"
            android:text="@string/sign_up"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/primaryText" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/sign_up_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        android:background="@drawable/border_gray"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="@dimen/_4sdp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/primaryText"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/sign_up_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        android:background="@drawable/border_gray"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="@dimen/_4sdp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/primaryText"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_email" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        android:background="@drawable/border_gray"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="@dimen/_4sdp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/primaryText"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_password" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_18sdp"
        android:gravity="center"
        android:weightSum="1"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.55"
            android:background="@drawable/button_red"
            android:fontFamily="@font/aclonica"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/sign_up_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>